tests/samples/passing/16_f64_to_string_edges.mlang
fn main | |->() {
    println(f64_to_string(0.0));
    println(f64_to_string(-0.5));
    println(f64_to_string(42.125));
    println(f64_to_string(-13.75));
}
