tests/samples/failing/while_condition_not_bool.mlang
// Condition must be boolean.
fn main() {
    while 1 {
        println("bad loop");
    }
}
